# HsCalculator

./: .stylish-haskell.yaml  .travis.yml  HsCalculator.cabal  README.md  example.hc
src/: Bench.hs  Eval.hs  Expr.hs  Main.hs  Parse.hs  PrettyPrint.hs  Tests.hs
