name:                  HsCalculator

--                     +-+------- breaking API changes
--                     | | +----- non-breaking API additions
--                     | | | +--- code changes with no API change
version:               0.2.0.0

synopsis:              A simple calculator written in Haskell in three hours

description:           A simple calculator written in Haskell in three hours

license:               GPL-3

license-file:          LICENSE

author:                Remy Goldschmidt

maintainer:            taktoa@gmail.com

category:              Math

build-type:            Simple

cabal-version:         >=1.10

executable HsCalculator
  main-is:             Main.hs
  default-extensions:  BangPatterns,
                       OverloadedStrings,
                       TupleSections,
                       TypeOperators,
                       MultiParamTypeClasses,
                       FlexibleInstances,
                       FlexibleContexts,
                       OverlappingInstances
  build-depends:       base >=4.7 && <4.8,
                       parsec >=3.1 && <3.2,
                       text >=1.2 && <1.3,
                       containers >=0.5 && <0.6,
                       hashable >=1.2 && <1.3,
                       exhaustive >=1.1 && <1.2 
  hs-source-dirs:      src
  default-language:    Haskell2010
  