name:                  HsCalculator

--                     +-+------- breaking API changes
--                     | | +----- non-breaking API additions
--                     | | | +--- code changes with no API change
version:               0.3.2.1

synopsis:              A simple calculator written in Haskell in three hours

description:           A simple calculator written in Haskell in three hours

license:               GPL-3

license-file:          LICENSE

author:                Remy Goldschmidt

maintainer:            taktoa@gmail.com

category:              Math

build-type:            Simple

cabal-version:         >=1.10

test-suite Test-HsCalculator
  test-module:         Tests
  other-modules:       Eval, Expr, PrettyPrint, Parse
  type:                detailed-0.9
  default-extensions:  BangPatterns,
                       OverloadedStrings,
                       TupleSections
  build-depends:       base >=4.7 && <4.8,
                       parsec >=3.1 && <3.2,
                       text >=1.2 && <1.3,
                       containers >=0.5 && <0.6,
                       haskeline >=0.7 && <0.8,
                       hashable >=1.2 && <1.3,
                       llvm-general-pure >=3.4 && <3.5,
                       QuickCheck >=2.7 && <2.8,
                       cabal-test-quickcheck >=0.1 && <0.2,
                       Cabal >=1.18 && <1.19
  hs-source-dirs:      src
  default-language:    Haskell2010

executable HsCalculator
  main-is:             Main.hs
  default-extensions:  BangPatterns,
                       OverloadedStrings,
                       TupleSections
  build-depends:       base >=4.7 && <4.8,
                       parsec >=3.1 && <3.2,
                       text >=1.2 && <1.3,
                       containers >=0.5 && <0.6,
                       haskeline >=0.7 && <0.8,
                       hashable >=1.2 && <1.3,
                       llvm-general-pure >=3.4 && <3.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  
